<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f8f8"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#665544" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:tag="bold"
                android:text="@string/join_title"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <!-- 사진 등록 -->

            <ImageButton
                android:id="@+id/pic_reg_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@drawable/add_photo" />
            
            <!-- 사진 보기 -->

            <ImageView
                android:id="@+id/avata_image"
                android:layout_centerInParent="true"
                android:layout_width="100dp"
                android:layout_height="100dp" />            
        </RelativeLayout>
        <!-- 이름 -->

        <TextView
            style="@style/label"
            android:tag="bold"
            android:text="@string/join_name_label" />

        <EditText
            android:id="@+id/join_name"
            style="@style/input"
            android:hint="@string/hint_name"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#e5e5e5" />

        <!-- 주 보호자 전화번호 -->

        <TextView
            style="@style/label"
            android:tag="bold"
            android:text="@string/join_parent_phone" />

        <EditText
            android:id="@+id/phone1"
            style="@style/input"
            android:hint="@string/hint_parent_phone"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#e5e5e5" />

        <!-- 보조 보호자 전화번호 -->

        <TextView
            style="@style/label"
            android:tag="bold"
            android:text="@string/join_parent_phone2" />

        <EditText
            android:id="@+id/phone2"
            style="@style/input"
            android:hint="@string/hint_parent_phone2"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#e5e5e5" />

        <!-- 보호자 이메일 -->
        <TextView
            style="@style/label"
            android:tag="bold"
            android:text="@string/join_parent_email" />

        <EditText
            android:id="@+id/parent_email"
            style="@style/input"
            android:hint="@string/hint_parent_email"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#e5e5e5" />
        
        <!-- 피보호자 이메일 -->
        <TextView
            style="@style/label"
            android:tag="bold"
            android:text="@string/join_ward_email" />

        <EditText
            android:id="@+id/ward_email"
            style="@style/input"
            android:hint="@string/hint_ward_email"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#e5e5e5" />    
            

        <!-- 피보호자 이메일 -->
        <TextView
            style="@style/label"
            android:tag="bold"
            android:text="주소 : " />

        <EditText
            android:id="@+id/ward_address"
            style="@style/input"
            android:hint="사용자의 주소를 입력하세요"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#e5e5e5" />   
                    

        <!-- 등록 -->

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/trace_btn"
            android:hint="@string/register_btn"
            android:textColor="#fff"
            android:layout_marginLeft="10dp"
            android:layout_margin="10dp"
            android:textSize="22sp" />
    </LinearLayout>

</ScrollView>